--- a/package.json
+++ b/package.json
@@ -13,37 +13,68 @@
     "re-build": "rm -rf node_modules .next out dist build && yarn install && yarn build"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@next/font": "13.1.1",
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-table": "^8.10.7",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "better-react-spinkit": "^2.0.4",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "dynamsoft-camera-enhancer": "^4.0.0",
     "dynamsoft-javascript-barcode": "^9.6.32",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "mongoose": "^5.13.21",
     "mui-datatables": "^4.3.0",
     "mui-one-time-password-input": "^2.0.1",
     "next": "^13.5.6",
-    "prettier": "^3.0.0",
+    "next-auth": "^4.24.5",
+    "nodemon": "^3.0.2",
+    "nookies": "^2.5.2",
+    "nprogress": "^0.2.0",
+    "prettier": "^3.1.1",
     "primereact": "^10.2.1",
     "qrcode": "^1.5.3",
     "react": "18.2.0",
+    "react-click-away-listener": "^2.2.3",
+    "react-content-loader": "^6.2.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-data-table-component": "^7.5.4",
     "react-data-table-component-extensions": "^1.6.0",
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-international-phone": "^4.0.4",
     "react-linear-gradient-button": "^1.1.1",
+    "react-loader-spinner": "^4.0.0",
+    "react-moment": "^1.1.3",
+    "react-onclickoutside": "^6.13.0",
     "react-otp-input": "^3.1.0",
     "react-qr-code": "^2.0.12",
+    "react-redux": "^9.0.3",
     "react-search-input": "^0.11.3",
     "react-slick": "^0.29.0",
+    "react-textarea-autosize": "^8.5.3",
+    "react-toastify": "^6.2.0",
+    "react-use": "^17.4.2",
     "sass": "^1.57.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "uuid": "^8.3.2",
+    "validator": "^13.11.0"
   }
 }
